# lyricsync

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.runpod  README.md  compose.modal.yaml  compose.runpod.yaml  compose.yaml  modal_app.py  pyproject.toml  runpod_handler.py
api/: main.py
lyricsync/: __init__.py  align.py  cli.py  lucid_json.py  model.py  sources.py  spicy_json.py  timefmt.py  ttml_in.py  ttml_out.py
scripts/: bench.py  build_extension.sh  build_runpod.sh  deploy_modal.sh  librespot_login.py  run_api.sh  sync_smoke.sh
tests/: regression_clearview.py  test_lucid_json.py  test_sources.py  test_timefmt.py  test_ttml_roundtrip.py
