[project]
name = "lyricsync"
version = "0.1.0"
description = "Forced-align song audio to known lyrics and emit word-level synced TTML + spicy-lyrics JSON"
requires-python = ">=3.10"
dependencies = [
    "stable-ts>=2.17.0",
    "torch>=2.0",
    "torchaudio>=2.0",
    "demucs>=4.0",
    "soundfile>=0.12",
    "librespot>=0.0.9",
    "lxml>=5.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
]
dev = [
    "pytest>=8.0",
]

[project.scripts]
lyricsync = "lyricsync.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["lyricsync*", "api*"]
